treesitter/grammar.js
    source_file: $ => repeat($._statement),

    // ── Statements ────────────────────────────────────────────────────────

    /**
     * `<attribute>* <definition>`. The attributes belong to the definition
     * after them, and appear as its preceding siblings: every kind of
     * definition may carry them, so they are read here, once, rather than
     * inside each of the five. A block's `let` is read by `do_block` directly
     * and so takes none, the way `parse.rs` refuses them there.
     */
    _statement: $ => seq(
      repeat($.attribute),
      choice(
        $.extern_definition,
        $.let_definition,
        $.type_definition,
        $.effect_definition,
        $.module_definition,
        $.using_statement,
      ),
    ),

    /**
     * `@key` or `@key <literal>` — one entry of a definition's metadata. The
     * value is literal data: nothing that begins a definition begins a
     * literal, so whether one follows the key is never in doubt.
     */
    module_definition: $ => seq(
      'module',
      field('name', $.identifier),
      optional(seq('=', repeat($._statement), 'end')),
    ),

    /** `extern <name> : <annotation> = <target>` — a target-provided value. */
    extern_definition: $ => seq(
      'extern',
      field('name', $.identifier),
      ':',
      field('type', $.extern_annotation),
      '=',
      field('target', $.string),
    ),

    /** The extern-only ABI type plus its ordinary outer `where` clause. */
    extern_annotation: $ => seq(
      field('type', $._extern_type),
      optional(field('clause', $.where_clause)),
    ),

    _extern_type: $ => choice(
      $.annotated_extern_type,
      $.extern_function_type,
      $.parenthesized_extern_function_type,
      $._type,
    ),

    extern_function_type: $ => prec.right(seq(
      'fn',
      '(',
      optional(seq(
        field('parameter', $._extern_type),
        repeat(seq(',', field('parameter', $._extern_type))),
        optional(','),
      )),
      ')',
      '->',
      field('result', $._extern_type),
      optional(field('effects', $.effect_row)),
    )),

    /** Transparent grouping around marked or annotated boundary types. */
    let_definition: $ => seq(
      choice(
        seq('let', field('pattern', $._pattern)),
        field('pattern', $.wildcard),
      ),
      optional(seq(':', field('type', $.annotation))),
      '=',
      field('body', $._expression),
    ),

    /**
     * `type <name> <'param>* = <annotation>`
     *
     * The parameters are variables, and wear the `'` an annotation's variable
     * does: a bare name in a type resolves to something declared elsewhere, and
     * a parameter resolves to whatever the use site hands it.
     */
    type_definition: $ => seq(
      'type',
      field('name', $.identifier),
      repeat(field('parameter', $.type_variable)),
      '=',
      field('body', $.annotation),
    ),

    /**
     * Empty, alias, unnamed singleton, and named closed-interface effects.
     *
     * The parameters are the ones a `type` declaration binds, written the
     * same way: `effect Ask 'a = { get: () -> 'a }` takes one, and every row
     * naming `!Ask` hands it an argument.
     */
    effect_definition: $ => seq(
      'effect',
      field('name', $.identifier),
      repeat(field('parameter', $.type_variable)),
      optional(seq('=', field('body', choice(
        prec(1, $.effect_alias_union),
        $._effect_operation_signature,
        $.named_effect_interface,
      )))),
    ),

    /**
     * `!Ask 'a + !Log + ..'e` — the row an alias stands for: applications of
     * other effects, and at most one tail naming a declared parameter.
     */
    effect_alias_union: $ => $._effect_alias_row,

    _effect_alias_row: $ => choice(
      $.rest,
      prec.right(seq($.effect_alias, optional(seq('+', $._effect_alias_row)))),
    ),

    named_effect_interface: $ => seq(
      '{',
      $.effect_operation_field,
      repeat(seq(',', $.effect_operation_field)),
      optional(','),
      '}',
    ),

    effect_operation_field: $ => seq(
      field('name', $.identifier),
      ':',
      field('signature', $._effect_operation_signature),
    ),

    // Grouping around an operation arrow is transparent and may nest, but its
    // recursive base is still an arrow: `(Nat)` is not an operation signature.
    _effect_operation_signature: $ => choice(
      $.function_type,
      $.parenthesized_effect_operation_signature,
    ),

    effect_alias: $ => prec(2, seq(
      field('name', choice($.effect_label, $.effect_path)),
      repeat(field('argument', $._type_atom)),
    )),

    // ── Paths ─────────────────────────────────────────────────────────────

    // The `Math::` segments in front of a name, outermost first. One rule for
    // both kinds of path, so that reading a prefix commits to neither:
    // `Sys::Inner::!Log` and `Sys::Inner::zero` are the same up to the sigil,
    // and a parser that guessed at the first `::` would have to take the guess
    // back at the last one.
    _module_prefix: $ => repeat1(prec(1, seq(field('module', $.identifier), '::'))),

    /**
     * `Math::double`, `Math::Vec::zero`, or `::root_name` — a name and the
     * modules it is reached through. A leading `::` selects a dependency.
     *
     * Only the qualified form is a node: a bare name is an [`identifier`] and
     * stays one, so every position that takes a path writes the choice out.
     * `::` binds tighter than application and than projection, which needs no
     * precedence to say — a path is an atom, so `Math::mk 1 2` applies
     * `Math::mk` and `Math::p.x` projects `x` out of `Math::p`.
     */
    path: $ => choice(
      seq($._module_prefix, field('name', $.identifier)),
      seq('::', optional($._module_prefix), field('name', $.identifier)),
    ),

    /**
     * `Sys::!Log` or `::Sys::!Log` — the same, for the sigilled label of an
     * effect.
     *
     * The segments come before the `!`: the path qualifies the whole label,
     * not the name inside it.
     */
    effect_path: $ => choice(
      seq($._module_prefix, field('name', $.effect_label)),
      seq('::', optional($._module_prefix), field('name', $.effect_label)),
    ),

    // ── Expressions ───────────────────────────────────────────────────────

    _expression: $ => choice(
      $.match_function,
      $.function,
      $.raise_expression,
      $.assignment,
      $.pipeline,
      $._boolean_or,
    ),

    assignment: $ => prec.right(PREC.assignment, seq(
      field('target', choice($.pipeline, $._boolean_or)),
      ':=',
      field('value', $._expression),
    )),

    pipeline: $ => prec.left(PREC.pipeline, seq(
      field('value', choice($.pipeline, $._boolean_or)),
      '|>',
      field('function', $._boolean_or),
    )),

    _boolean_or: $ => choice($.boolean_or, $._boolean_xor),
    boolean_or: $ => prec.left(PREC.booleanOr, seq(
      field('left', $._boolean_or),
      'or',
      field('right', $._boolean_xor),
    )),

    _boolean_xor: $ => choice($.boolean_xor, $._boolean_and),
    boolean_xor: $ => prec.left(PREC.booleanXor, seq(
      field('left', $._boolean_xor),
      'xor',
      field('right', $._boolean_and),
    )),

    _boolean_and: $ => choice($.boolean_and, $._comparison),
    boolean_and: $ => prec.left(PREC.booleanAnd, seq(
      field('left', $._boolean_and),
      'and',
      field('right', $._comparison),
    )),

    _comparison: $ => choice($.comparison, $.binary_expression),
    addition: $ => prec.left(PREC.addition, seq(
      field('left', $.binary_expression),
      field('operator', choice('+', '-')),
      field('right', $.binary_expression),
    )),

    multiplication: $ => prec.left(PREC.multiplication, seq(
      field('left', $.binary_expression),
      field('operator', choice('*', '/')),
      field('right', $.binary_expression),
    )),

    unary_expression: $ => prec(PREC.unary, seq(
      choice('-', 'not', 'mut', '~'),
      field('value', $.binary_expression),
    )),

    _application_expression: $ => choice(
      $.application,
      $._head_expression,
    ),

    /**
     * The expressions an application may be built from. An `if`, `match`,
     * `handle`, or `do` reaches here — each may be applied and projected off —
     * but none begins an argument, which is what keeps `f match ... end` from
     * being an application of `f`.
     */
    application: $ => prec.left(PREC.application, seq(
      field('function', $._application_expression),
      field('argument', $._argument),
    )),

    /**
     * What may follow a function without parentheses around it: the atoms
     * `Parser::at_expr_atom` lists, whatever is projected off one of them, and
     * a `fn`, whose body then runs to the end of the application.
     */
    _argument: $ => choice(
      $._argument_atom,
      alias($._atom_projection, $.projection),
      $.match_function,
      $.function,
    ),

    // A projection whose base is an atom rather than a `match` or a `handle`,
    // since neither of those begins an argument. The same node as
    // [`projection`], reached from the one position that narrows what it may
    // be read off.
    _atom: $ => choice($._non_tag_atom, $.tag_expression),

    projection: $ => prec.left(PREC.projection, seq(
      field('base', choice(
        $._atom,
        $.projection,
        $.if_expression,
        $.match_expression,
        $.handle_expression,
        $.do_block,
      )),
      '.',
      field('field', choice(
        $.identifier,
        $.string,
        $.numeric_field,
        alias($._malformed_numeric_field, $.ERROR),
      )),
    )),

    /** `fn <arg>+ => <expr>` — the body runs as far right as it can. */
    function: $ => prec.right(seq(
      'fn',
      repeat1(field('parameter', choice($.identifier, $.wildcard))),
      '=>',
      field('body', $._expression),
    )),

    /** `fn | <pattern> => <expr> (| <pattern> => <expr>)*`. */
    match_expression: $ => seq(
      'match',
      field('scrutinee', $._expression),
      'with',
      optional(seq(optional('|'), sepBy1('|', $.match_arm))),
      'end',
    ),

    match_arm: $ => seq(
      field('pattern', $._pattern),
      '=>',
      field('body', $._expression),
    ),

    /** `handle <expr> with [|] <arm> (| <arm>)* end` */
    handle_expression: $ => seq(
      'handle',
      field('body', $._expression),
      'with',
      optional(seq(optional('|'), sepBy1('|', $.handler_arm))),
      'end',
    ),

    /**
     * `!Log.write s => ...` or `return x => ...`. `return` heads an arm here
     * and is an ordinary name everywhere else.
     */
    handler_arm: $ => seq(
      field('head', choice($.operation, 'return')),
      field('binder', choice($.identifier, $.wildcard)),
      '=>',
      field('body', $._expression),
    ),

    /** `raise <expr>` — the body runs as far right as a `fn`'s does. */
    operation: $ => choice(
      prec(1, seq(
        field('effect', choice($.effect_label, $.effect_path)),
        '.',
        field('name', $.identifier),
      )),
      field('effect', choice($.effect_label, $.effect_path)),
    ),

    /** Positional structs permit one trailing spread. */
    _pattern: $ => choice(
      $.identifier,
      $.wildcard,
      $.natural,
      $.string,
      $.boolean,
      $.unit,
      $.struct_pattern,
      $.tuple_pattern,
      $.array_pattern,
      $.tag_pattern,
      $.hidden_pattern,
      $.parenthesized_pattern,
    ),

    /** `{ x, y: <pattern>, .. }`, with an optional trailing comma. */
    struct_pattern: $ => seq('{', optional($._struct_pattern_body), '}'),

    // The `..` comes last and takes no comma after it: the fields it stands
    // for have no order among the named ones to claim. It takes no name
    // either — a named struct rest is not part of the language yet — so the
    // struct's rest is the bare dots, shown under the one `rest_pattern` name.
    _struct_pattern_body: $ => choice(
      alias($._struct_rest, $.rest_pattern),
      seq(
        $.struct_pattern_field,
        optional(seq(',', optional($._struct_pattern_body))),
      ),
    ),

    /**
     * A field, or a bare identifier punning one to itself. Quoted and numeric
     * labels never pun: `{"field name": p}` and `{0: p}` must say which
     * pattern receives the field.
     */
    struct_pattern_field: $ => choice(
      seq(
        field('name', $.identifier),
        optional(seq(':', field('pattern', $._pattern))),
      ),
      seq(
        field('name', choice(
          $.string,
          $.numeric_field,
          alias($._malformed_numeric_field, $.ERROR),
        )),
        ':',
        field('pattern', $._pattern),
      ),
    ),

    /**
     * The `..` that makes a struct pattern match on at least its fields, or
     * an array pattern on at least its elements — where it may also name the
     * elements it stands for.
     */
    rest_pattern: $ => prec.right(seq('..', optional(field('name', $.identifier)))),

    _struct_rest: _ => '..',

    /**
     * `[a, ..rest, b]` — the elements of an array, with at most one `..`
     * anywhere among them and an optional trailing comma.
     */
    array_pattern: $ => seq(
      '[',
      optional(seq(
        field('element', $._array_pattern_item),
        repeat(seq(',', field('element', $._array_pattern_item))),
        optional(','),
      )),
      ']',
    ),

    _array_pattern_item: $ => choice($.rest_pattern, $._pattern),

    /** `#Some x` — the payload is taken greedily, as a tag expression's is. */
    tag_pattern: $ => prec.right(PREC.tag, seq(
      field('name', $.tag),
      optional(field('payload', $._pattern)),
    )),

    /** Positional struct patterns may end with a bare rest. */
    tuple_pattern: $ => seq(
      '(',
      choice(
        seq(alias($._struct_rest, $.rest_pattern), optional(',')),
        seq(
          field('element', $._pattern),
          ',',
          optional($._tuple_pattern_tail),
        ),
      ),
      ')',
    ),

    _tuple_pattern_tail: $ => choice(
      seq(alias($._struct_rest, $.rest_pattern), optional(',')),
      seq(
        field('element', $._pattern),
        optional(seq(',', optional($._tuple_pattern_tail))),
      ),
    ),

    parenthesized_pattern: $ => seq('(', $._pattern, ')'),

    /**
     * `hide 'a <pattern>` — open a hidden type, naming it `'a` for the arm.
     * The payload is taken greedily, as a tag pattern's is, so `hide 'a #Some
     * x` opens onto `(#Some x)`; `Parser::pattern` reads it the same way.
     */
    hidden_pattern: $ => prec.right(PREC.tag, seq(
      'hide',
      field('variable', $.type_variable),
      field('pattern', $._pattern),
    )),

    // ── Types ─────────────────────────────────────────────────────────────

    /** `<type> [where <clause> (';' <clause>)*]` — what a definition is ascribed. */
    annotation: $ => seq(
      field('type', $._type),
      optional(field('clause', $.where_clause)),
    ),

    _type: $ => choice($.hidden_type, $.function_type, $._type_sum),

    /**
     * `hide 'a => <type>` — a hidden type. The body extends as far right as
     * it can, the way a lambda's does, so it takes the whole arrow after it
     * and needs parentheses as an arrow's input or an application's argument;
     * `Parser::arrow` reads it above the arrow for the same reason.
     */
    function_type: $ => prec.right(seq(
      field('from', $._type_sum),
      '->',
      field('to', $._type),
      optional(field('effects', $.effect_row)),
    )),

    _type_sum: $ => choice($.sum_type, $.effect_type, $._type_application),

    /**
     * `[|] <case> ('|' <case>)* ['|' ..[<rest>]]` — a sum, as the cases it
     * allows. `|` alone is the sum with no cases at all.
     */
    effect_row: $ => seq('+', choice('|', $._effect_row_body)),

    struct_type: $ => seq('{', optional($._struct_type_body), '}'),
