treesitter/test/corpus/operators.txt
================================================================================
Real-number arithmetic respects precedence
================================================================================

let value = -1 + 2 * 3 - 4 / 5

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (addition
      (addition
        (natural)
        (multiplication
          (natural)
          (natural)))
      (multiplication
        (natural)
        (natural)))))

================================================================================
Bool operators respect precedence
================================================================================

let value = not true and false xor true or false

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (boolean_or
      (boolean_xor
        (boolean_and
          (unary_expression
            (boolean))
          (boolean))
        (boolean))
      (boolean))))

================================================================================
Pipeline is left-associative and looser than arithmetic
================================================================================

let value = 1 + 2 |> f |> g

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (pipeline
      (pipeline
        (addition
          (natural)
          (natural))
        (identifier))
      (identifier))))
