treesitter/test/corpus/patterns.txt
================================================================================
The shapes a value may be taken apart as
================================================================================

let a = match v with
  | x => 0
  | _ => 0
  | 1 => 0
  | () => 0
  | (y) => 0
  end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (match_expression
      (identifier)
      (match_arm
        (identifier)
        (natural))
      (match_arm
        (wildcard)
        (natural))
      (match_arm
        (natural)
        (natural))
      (match_arm
        (unit)
        (natural))
      (match_arm
        (parenthesized_pattern
          (identifier))
        (natural)))))

================================================================================
Tuple patterns keep their positional spelling
================================================================================

let a = match v with
  | (x, #Some y,) => x
  | (only,) => only
  end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (match_expression
      (identifier)
      (match_arm
        (tuple_pattern
          (identifier)
          (tag_pattern
            (tag)
            (identifier)))
        (identifier))
      (match_arm
        (tuple_pattern
          (identifier))
        (identifier)))))

================================================================================
A struct pattern puns a bare field name
================================================================================

let a = match v with
  | { x, y: inner } => x
  end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (match_expression
      (identifier)
      (match_arm
        (struct_pattern
          (struct_pattern_field
            (identifier))
          (struct_pattern_field
            (identifier)
            (identifier)))
        (identifier)))))

================================================================================
A struct pattern written open matches at least its fields
================================================================================

let a = match v with
  | { x, .. } => x
  | { .. } => 0
  end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (match_expression
      (identifier)
      (match_arm
        (struct_pattern
          (struct_pattern_field
            (identifier))
          (rest_pattern))
        (identifier))
      (match_arm
        (struct_pattern
          (rest_pattern))
        (natural)))))

================================================================================
A tag pattern's payload is taken greedily
================================================================================

let a = match v with
  | #A #B x => x
  | #None => 0
  end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (match_expression
      (identifier)
      (match_arm
        (tag_pattern
          (tag)
          (tag_pattern
            (tag)
            (identifier)))
        (identifier))
      (match_arm
        (tag_pattern
          (tag))
        (natural)))))

================================================================================
A function header takes names and the discard
================================================================================

let konst = fn x _ => x

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (function
      (identifier)
      (wildcard)
      (identifier))))

================================================================================
Quoted struct fields require explicit subpatterns
================================================================================

let a = match v with
  | { "field name": inner, plain, "tag field": #"some case" payload } => inner
  end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (match_expression
      (identifier)
      (match_arm
        (struct_pattern
          (struct_pattern_field
            (string)
            (identifier))
          (struct_pattern_field
            (identifier))
          (struct_pattern_field
            (string)
            (tag_pattern
              (tag)
              (identifier))))
        (identifier)))))

================================================================================
A quoted struct field cannot pun
================================================================================

let a = match v with
  | { "field name" } => 0
  end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (match_expression
      (identifier)
      (match_arm
        (struct_pattern
          (ERROR
            (string)))
        (natural)))))

================================================================================
Bare numeric pattern fields require explicit subpatterns
================================================================================

let a = match v with | { 001: inner, 2: _ } => inner end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (match_expression
      (identifier)
      (match_arm
        (struct_pattern
          (struct_pattern_field
            (numeric_field)
            (identifier))
          (struct_pattern_field
            (numeric_field)
            (wildcard)))
        (identifier)))))

================================================================================
Array patterns name elements from either end around one rest
================================================================================

let a = match v with
  | [] => 0
  | [x] => 1
  | [x, ..] => 2
  | [.., last] => 3
  | [first, ..middle, last,] => 4
  | [#Some x, [y, ..], ..] => 5
  end

let [..all] = v

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (match_expression
      (identifier)
      (match_arm
        (array_pattern)
        (natural))
      (match_arm
        (array_pattern
          (identifier))
        (natural))
      (match_arm
        (array_pattern
          (identifier)
          (rest_pattern))
        (natural))
      (match_arm
        (array_pattern
          (rest_pattern)
          (identifier))
        (natural))
      (match_arm
        (array_pattern
          (identifier)
          (rest_pattern
            (identifier))
          (identifier))
        (natural))
      (match_arm
        (array_pattern
          (tag_pattern
            (tag)
            (identifier))
          (array_pattern
            (identifier)
            (rest_pattern))
          (rest_pattern))
        (natural))))
  (let_definition
    (array_pattern
      (rest_pattern
        (identifier)))
    (identifier)))

================================================================================
A hidden pattern opens onto the pattern after its variable
================================================================================

let a = match v with
  | hide 'item { mirror, value } => mirror
  | hide 'x #Some y => y
  | #Some hide 'z z => z
  end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (match_expression
      (identifier)
      (match_arm
        (hidden_pattern
          (type_variable)
          (struct_pattern
            (struct_pattern_field
              (identifier))
            (struct_pattern_field
              (identifier))))
        (identifier))
      (match_arm
        (hidden_pattern
          (type_variable)
          (tag_pattern
            (tag)
            (identifier)))
        (identifier))
      (match_arm
        (tag_pattern
          (tag)
          (hidden_pattern
            (type_variable)
            (identifier)))
        (identifier)))))

================================================================================
Tuple rest patterns
================================================================================

let (a, b, ..) = value
let (a, ..,) = value
let (..) = value
let (..,) = value

--------------------------------------------------------------------------------

(source_file
  (let_definition (tuple_pattern (identifier) (identifier) (rest_pattern)) (identifier))
  (let_definition (tuple_pattern (identifier) (rest_pattern)) (identifier))
  (let_definition (tuple_pattern (rest_pattern)) (identifier))
  (let_definition (tuple_pattern (rest_pattern)) (identifier)))
