treesitter/test/corpus/primitives.txt
================================================================================
Primitive literals are expressions and patterns
================================================================================

let f = fn x => match x with
  | 1i => 1i
  | 1.5 => 1.5
  | "text" => "text"
  | true => false
  | _ => true
  end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (function
      (identifier)
      (match_expression
        (identifier)
        (match_arm
          (natural)
          (natural))
        (match_arm
          (natural)
          (natural))
        (match_arm
          (string)
          (string))
        (match_arm
          (boolean)
          (boolean))
        (match_arm
          (wildcard)
          (boolean))))))

================================================================================
Raw string lines are one string, and a comment between them makes two
================================================================================

extern f : fn(Int) -> Int =
  \\(x) => {
  \\  return x -- not a comment
  \\}

let s = \\one line

let t = \\a
-- between
let u = \\b

--------------------------------------------------------------------------------

(source_file
  (extern_definition
    (identifier)
    (extern_annotation
      (extern_function_type
        (identifier)
        (identifier)))
    (string))
  (let_definition
    (identifier)
    (string))
  (let_definition
    (identifier)
    (string))
  (line_comment)
  (let_definition
    (identifier)
    (string)))
