treesitter/test/corpus/statements.txt
================================================================================
A definition
================================================================================

let id = fn x => x

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (function
      (identifier)
      (identifier))))

================================================================================
A definition with an ascription
================================================================================

let fst : { x: Nat, y: Nat } -> Nat = fn p => p.x

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (annotation
      (function_type
        (struct_type
          (struct_type_field
            (identifier)
            (identifier))
          (struct_type_field
            (identifier)
            (identifier)))
        (identifier)))
    (function
      (identifier)
      (projection
        (identifier)
        (identifier)))))

================================================================================
A definition binding a pattern
================================================================================

let { x, y: second } = point

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (struct_pattern
      (struct_pattern_field
        (identifier))
      (struct_pattern_field
        (identifier)
        (identifier)))
    (identifier)))

================================================================================
A declaration, with and without parameters
================================================================================

type Boxed = { value: Nat }

type Pair 'A 'B = { first: 'A, second: 'B }

--------------------------------------------------------------------------------

(source_file
  (type_definition
    (identifier)
    (annotation
      (struct_type
        (struct_type_field
          (identifier)
          (identifier)))))
  (type_definition
    (identifier)
    (type_variable)
    (type_variable)
    (annotation
      (struct_type
        (struct_type_field
          (identifier)
          (type_variable))
        (struct_type_field
          (identifier)
          (type_variable))))))

================================================================================
An effect declaring its operations
================================================================================

effect Log = { write: Nat -> (), flush: () -> (), }

--------------------------------------------------------------------------------

(source_file
  (effect_definition
    (identifier)
    (named_effect_interface
      (effect_operation_field
        (identifier)
        (function_type
          (identifier)
          (unit)))
      (effect_operation_field
        (identifier)
        (function_type
          (unit)
          (unit))))))

================================================================================
An effect standing for the effects it names
================================================================================

effect Console = !Log + !IO

--------------------------------------------------------------------------------

(source_file
  (effect_definition
    (identifier)
    (effect_alias_union
      (effect_alias
        (effect_label))
      (effect_alias
        (effect_label)))))

================================================================================
The empty effect
================================================================================

effect Nil

--------------------------------------------------------------------------------

(source_file
  (effect_definition
    (identifier)))

================================================================================
An application stops in front of the next definition
================================================================================

let a = f x

let b = 2

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (application
      (identifier)
      (identifier)))
  (let_definition
    (identifier)
    (natural)))

================================================================================
The former bundle keyword is an ordinary identifier
================================================================================

let bundle = bundle

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (identifier)))

================================================================================
extern declaration
================================================================================

extern log : String -> () = console.log

--------------------------------------------------------------------------------

(source_file
  (extern_definition
    name: (identifier)
    type: (annotation
      type: (function_type
        from: (identifier)
        to: (unit)))
    target: (foreign_path
      segment: (identifier)
      segment: (identifier))))

================================================================================
Unnamed and struct-input singleton effects
================================================================================

effect Log = String -> ()
effect Structured = { value: Nat } -> ()

--------------------------------------------------------------------------------

(source_file
  (effect_definition
    (identifier)
    (function_type
      (identifier)
      (unit)))
  (effect_definition
    (identifier)
    (function_type
      (struct_type
        (struct_type_field
          (identifier)
          (identifier)))
      (unit))))

================================================================================
Bare and qualified unnamed operations
================================================================================

let write = !Log
let call = Sys::!Log "message"
let handled = handle call with | Sys::!Log message => () end

--------------------------------------------------------------------------------

(source_file
  (let_definition
    (identifier)
    (operation
      (effect_label)))
  (let_definition
    (identifier)
    (application
      (operation
        (effect_path
          (identifier)
          (effect_label)))
      (string)))
  (let_definition
    (identifier)
    (handle_expression
      (identifier)
      (handler_arm
        (operation
          (effect_path
            (identifier)
            (effect_label)))
        (identifier)
        (unit)))))

================================================================================
Rejected legacy and row-like effect interfaces recover locally
================================================================================

effect Empty = {}
effect Open = { op: Nat -> (), .. }
effect Old = op : Nat -> () | flush : () -> ()
let after = 1n

--------------------------------------------------------------------------------

(source_file
  (effect_definition
    (identifier))
  (ERROR
    (struct_type))
  (effect_definition
    (identifier))
  (ERROR
    (struct_type
      (struct_type_field
        (identifier)
        (function_type
          (identifier)
          (unit)))
      (rest)))
  (effect_definition
    (identifier)
    (function_type
      (type_application
        (identifier)
        (ERROR)
        (identifier))
      (function_type
        (type_application
          (unit)
          (ERROR)
          (identifier)
          (ERROR)
          (unit))
        (unit))))
  (let_definition
    (identifier)
    (natural)))
